--- a/football_tournament/templates/tournament/ranking.html
+++ b/football_tournament/templates/tournament/ranking.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'styles/ranking.css' %}?v=9">
+<link rel="stylesheet" href="{% static 'styles/ranking.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -103,14 +103,12 @@
         <h3>Classifica Marcatori</h2>
         <table>
             <tr>
-                <th class="col-pos">Posizione</th>
                 <th class="col-player">Giocatore</th>
                 <th class="col-team">Squadra</th>
                 <th class="col-stat">Goal</th>
             </tr>
             {% for scorer in top_scorers %}
             <tr>
-                <td class="col-pos">{{ forloop.counter }}</td>
                 <td class="col-player">{{ scorer.surname }}</td>
                 <td class="col-team">{{ scorer.team.name }}</td>
                 <td class="col-stat">{{ scorer.total_goals }}</td>
@@ -121,14 +119,12 @@
         <h3>Classifica MVP</h2>
         <table>
             <tr>
-                <th class="col-pos">Posizione</th>
                 <th class="col-player">Giocatore</th>
                 <th class="col-team">Squadra</th>
                 <th class="col-stat">MVP</th>
             </tr>
             {% for mvp in mvp_ranking %}
             <tr>
-                <td class="col-pos">{{ forloop.counter }}</td>
                 <td class="col-player">{{ mvp.surname }}</td>
                 <td class="col-team">{{ mvp.team.name }}</td>
                 <td class="col-stat">{{ mvp.mvp_count }}</td>
