--- a/football_tournament/templates/tournament/manage_matches.html
+++ b/football_tournament/templates/tournament/manage_matches.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% block content %}
 
-<link rel="stylesheet" href="{% static 'styles/manage_matches.css' %}">
+<link rel="stylesheet" href="{% static 'styles/manage_matches.css' %}?v=1">
 <h2>Calendario e Risultati</h2>
 <table class="matches-table">
     <tr>
