Temporary hide calendar

--- a/football_tournament/templates/tournament/base.html
+++ b/football_tournament/templates/tournament/base.html
@@ -17,7 +17,7 @@
         <div class="link-section">
             <a href="{% url 'home' %}">HOME</a>
             <a href="{% url 'team_and_player_list' %}">SQUADRE</a>
-            <a href="{% url 'match_schedule' %}">PARTITE</a>
+            <!-- <a href="{% url 'match_schedule' %}">PARTITE</a> -->
             <a href="{% url 'ranking' %}">CLASSIFICHE</a>
             <a href="{% url 'document_list' %}">DOWNLOADS</a>
             <a href="{% url 'login' %}?next={{ request.path }}">AREA RISERVATA</a>
