Added logo and small changes in layout

--- a/football_tournament/templates/tournament/base.html
+++ b/football_tournament/templates/tournament/base.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}CopaMundial 2025{% endblock title %}</title>
-    <link rel="stylesheet" href="{% static 'styles/base.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/base.css' %}?v=1">
     {% block extra_css %}{% endblock %}
 </head>
 
@@ -47,6 +47,9 @@
                 </a>
                 <a href="https://www.instagram.com/dementosofficial/" target="_blank" class="logo-box">
                     <img src="{% static 'images/dementos.png' %}" alt="Dementos">
+                </a>
+                <a href="https://arredamentifumagalli1957.it/" target="_blank" class="logo-box">
+                    <img src="{% static 'images/fumagalli_logo.jpg' %}" alt="Dementos">
                 </a>
             </div>
         </div>
