--- a/football_tournament/templates/tournament/home.html
+++ b/football_tournament/templates/tournament/home.html
@@ -5,7 +5,7 @@
 
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'styles/home.css' %}">
+<link rel="stylesheet" href="{% static 'styles/home.css' %}?v=3">
 {% endblock %}
 
 {% block content %}
