--- a/football_tournament/tournament/static/styles/base.css
+++ b/football_tournament/tournament/static/styles/base.css
@@ -104,7 +104,8 @@ body::before {
         position: relative !important;
         width: 100vw !important;
         max-width: 100% !important;
-        height: auto !important;
+        height: 42vw !important;
+        overflow: hidden;
         display: flex !important;
         flex-direction: column !important;
         align-items: center !important;
@@ -164,8 +165,8 @@ body::before {
     }
 
     .logo-box {
-        width: 70px;
-        height: 60px;
+        width: 80px; /* aumentato da 70 */
+        height: 70px; /* aumentato da 60 */
         display: flex;
         align-items: center;
         justify-content: center;
@@ -174,7 +175,7 @@ body::before {
     }
 
     .logo-box img {
-        max-height: 50px;
+        max-height: 60px; /* aumentato da 50 */
         max-width: 100%;
         object-fit: contain;
         display: block;
