--- a/football_tournament/tournament/static/styles/team_and_player_list.css
+++ b/football_tournament/tournament/static/styles/team_and_player_list.css
@@ -69,12 +69,13 @@
 }
 
 .team-photo {
-    width: 100%;
+    width: 60%;
     height: auto;
     object-fit: contain;
     border-radius: 4px;
     cursor: pointer;
     transition: transform 0.2s ease-in-out;
+    margin-top: 10px;
 }
 
 .team-photo:hover {
@@ -93,4 +94,35 @@
     .teams-container {
         grid-template-columns: repeat(2, 1fr);
     }
+}
+
+.lightbox {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
+}
+
+.lightbox-img {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 6px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.5);
+}
+
+.lightbox-close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    font-size: 40px;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    z-index: 10000;
 }
